--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# <div data-node-type="callout">
-# <div data-node-type="callout-emoji">💡</div>
-# <div data-node-type="callout-text">Make sure your URI starts with "postgresql://...". If not, change it to so in the .env file.</div>
-# </div>
+<div data-node-type="callout">
+<div data-node-type="callout-emoji">💡</div>
+<div data-node-type="callout-text">Make sure your URI starts with "postgresql://...". If not, change it to so in the .env file.</div>
+</div>
 
-DATABASE_URI=[postgresql://hackstacker_3_0_user:CANu1wskhBCzDhE9Atn5XoGy7tS9FpVt@dpg-cqrr2p88fa8c73d93sjg-a.virginia-postgres.render.com/hackstacker_3_0]
+DATABASE_URI='postgresql://hackstacker_3_0_user:CANu1wskhBCzDhE9Atn5XoGy7tS9FpVt@dpg-cqrr2p88fa8c73d93sjg-a.virginia-postgres.render.com/hackstacker_3_0'
 PYTHON_VERSION=3.9.17
