--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@
 <div data-node-type="callout-text">Make sure your URI starts with "postgresql://...". If not, change it to so in the .env file.</div>
 </div>
 
-DATABASE_URI='postgresql://hackstacker_3_0_user:CANu1wskhBCzDhE9Atn5XoGy7tS9FpVt@dpg-cqrr2p88fa8c73d93sjg-a.virginia-postgres.render.com/hackstacker_3_0'
+# DATABASE_URI='postgresql://hackstacker_3_0_user:CANu1wskhBCzDhE9Atn5XoGy7tS9FpVt@dpg-cqrr2p88fa8c73d93sjg-a.virginia-postgres.render.com/hackstacker_3_0'
+DATABASE_URI=postgresql://postgres:Clascoke47!@localhost/hackstacker_3_0
 PYTHON_VERSION=3.9.17
